k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audioclass
  labels:
    app.kubernetes.io/name: audioclass
    app.kubernetes.io/version: "9.1.0"
    app.kubernetes.io/part-of: audioclass-platform
